Fixed width for the data point browser view so it doesnt wrap

--- a/war/css/styles.css
+++ b/war/css/styles.css
@@ -153,6 +153,12 @@ ul {
 	text-decoration: none;	
 }
 
+/* dataPointBrowserView */
+#dataPointBrowserView {
+	width: 300px;	
+}
+
+
 /* Page specific properties */
 
 /* Home page css */
